--- a/novo_bd1971_robusto/site/templates/layout.html
+++ b/novo_bd1971_robusto/site/templates/layout.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Brasileirão Stats{% endblock %}</title>
+    <title>{% block title %}Stats{% endblock %}</title>
 
     <!-- CSS Principal -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
