Tue, Dec 2, 2025, 5:59 PM -03:00

--- a/novo_bd1971_robusto/site/templates/index.html
+++ b/novo_bd1971_robusto/site/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% block title %}Brasileirão Stats - Estatísticas Completas do Campeonato Brasileiro{% endblock %}
+{% block title %}IC - Kamusari{% endblock %}
 
 {% block content %}
 <!-- Hero Section -->
