--- a/novo_bd1971_robusto/site/templates/layout.html
+++ b/novo_bd1971_robusto/site/templates/layout.html
@@ -25,7 +25,7 @@
             <div class="nav-brand">
                 <a href="{{ url_for('index') }}">
                     <span class="logo">⚽</span>
-                    <span class="brand-text">Brasileirão Stats</span>
+                    <span class="brand-text">Stats</span>
                 </a>
             </div>
 
